--- a/supaship-video/index.html
+++ b/supaship-video/index.html
@@ -51,7 +51,7 @@
     </section>
 
     <!-- Section to show when the User is Signed In -->
-    <section id="whenSignedOut" hidden="true">
+    <section id="whenSignedIn" hidden="true">
       <div id="userDetails"></div>
       <button id="signOutBtn" class="btn btn-primary">Sign Out</button>
     </section>
